Fix vertical scrollbar (commit 33523d97) in IE6/7.

--- a/src/stylesheets/application.sass
+++ b/src/stylesheets/application.sass
@@ -1,9 +1,11 @@
+html
+  overflow-y: scroll
+
 body
   font:
     family: "Helvetica"
     size: 11pt
   background: url('/images/background.png') repeat top left
-  overflow-y: scroll
 
 #banner
   background: url('/images/banner.jpg')
